--- a/Lab9/Debug/makefile
+++ b/Lab9/Debug/makefile
@@ -62,7 +62,7 @@ main-build: Lab9.elf secondary-outputs
 
 # Tool invocations
 Lab9.elf: $(OBJS) $(USER_OBJS) C:\Users\tnata\Documents\GitHub\Lab9\Lab9\STM32F411RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Lab9.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\tnata\Documents\GitHub\Lab9\Lab9\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Lab9.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "Lab9.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\tnata\Documents\GitHub\Lab9\Lab9\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Lab9.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -u _scanf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
